@@ -490,3 +490,4 @@ Code:
 * Removed duplicate entry for Iota Horologii (HR 810) in exoplanet catalog
 * Unix Gtk: removed problem preventing ShowClouds from working. (dramsey)
 * Unix Gtk: Options Dialog. (dramsey)
+* Celestia Watcher extended. (dramsey)
